Fix spacing between header and content, and create will read page

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header{
     display:flex;
     justify-content:space-between;
     border-bottom: 1px solid gray;
+    margin-bottom:64px;
 }
 
 ul{
@@ -85,7 +86,6 @@ ul{
 }
 
 .title-text::before{
-    background-color: white;
     width: 100%;
     color: var(--color, yellowgreen);  
 }
@@ -134,7 +134,7 @@ ul{
     flex-direction:column;
     justify-content:initial;
     gap: 16px;
-
+    margin:0px;
 }
 
 
@@ -155,7 +155,6 @@ a{
     display:flex;
     flex-direction:row;
     gap: 80px;
-    padding: 64px 0px;
 }
 
 
@@ -166,6 +165,8 @@ a{
     align-content:flex-start;
     justify-content: left;
     gap:64px;
+    margin: 0px;
+
 
 }
 
@@ -207,7 +208,6 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    padding-top: 64px;
 }
 
 #card-container{
@@ -308,3 +308,16 @@ input .login{
     justify-content: space-between;
     height: 100%;
 }
+
+/*Will read*/
+#read{
+    position: fixed;
+    margin-right: 64px;
+}
+
+#margin-books{
+    margin-left: 250px;
+    gap: 112px
+}
+
+
